--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "immutable": "^4.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.2",
     "react-router-config": "^5.1.1",
