--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-immutable": "^4.0.0",
     "styled-components": "^5.3.8",
